--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-Yandex
-Vladimir Epifanov
+The following authors have created the source code of "cljs-yandex-asr" published and distributed by YANDEX LLC as the owner:
+
+Vladimir Epifanov <voldmar@yandex-team.ru>
